--- a/Docker/backend/docker-compose.yaml
+++ b/Docker/backend/docker-compose.yaml
@@ -1,15 +1,14 @@
 version: "3.8"
 
-
 services:
   database:
     image: mongo
     restart: unless-stopped
     env_file: ./.env
     container_name: database
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=$DATABASE_USER
-      - MONGO_INITDB_ROOT_PASSWORD=$DATABASE_PASSWORD
+    # environment:
+    #   - MONGO_INITDB_ROOT_USERNAME=$DATABASE_USER
+    #   - MONGO_INITDB_ROOT_PASSWORD=$DATABASE_PASSWORD
     ports:
       - $DATABASE_LOCAL_PORT:$DATABASE_DOCKER_PORT
     volumes:
@@ -17,6 +16,7 @@ services:
       - db_volume:/data/db
     networks:
       - app-networks
+
   backend:
     depends_on:
       - database
@@ -26,11 +26,11 @@ services:
     env_file: ./.env
     ports:
       - $APP_LOCAL_PORT:$APP_DOCKER_PORT
-    environment:
-      - DATABASE_HOST=$DATABASE_HOST
-      - DATABASE_USER=$DATABASE_USER
-      - DATABASE_PASSWORD=$DATABASE_PASSWORD
-      - DATABASE_PORT=$DATABASE_PORT
+    # environment:
+    #   - DATABASE_HOST=$DATABASE_HOST
+    #   - DATABASE_USER=$DATABASE_USER
+    #   - DATABASE_PASSWORD=$DATABASE_PASSWORD
+    #   - DATABASE_PORT=$DATABASE_PORT
     networks:
       - app-networks
 
