--- a/kubernetes/nginx-1/deployment.yaml
+++ b/kubernetes/nginx-1/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx-deployment
   labels:
-    app: nginx
+    app: nginx-dpl
 spec:
   replicas: 3
   selector:
