--- a/kubernetes/nginx-1/service.yaml
+++ b/kubernetes/nginx-1/service.yaml
@@ -3,9 +3,12 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
+  type: NodePort
   selector:
-    app: nginx
+    app: nginx-dpl
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
+    nodePort: 30080
+
