--- a/kubernetes/nginx-1/service.yaml
+++ b/kubernetes/nginx-1/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: nginx-dpl
+    app: nginx #Label of the deployment to link
   ports:
   - protocol: TCP
     port: 80
