--- a/kubernetes/app/manifests/mongodb-secret.yaml
+++ b/kubernetes/app/manifests/mongodb-secret.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: backend-app
 type: Opaque
 data:
-  mongodb-root-username: bW9uZ29hZG1pbg==    # "mongoadmin" base64 encoded
-  mongodb-root-password: cGFzc3dvcmQ=         # "password" base64 encoded
+  mongodb-root-username: bW9uZ29hZG1pbg==    # "mongoadmin" base64 encoded (echo -n mongoadmin | base64)
+  mongodb-root-password: cGFzc3dvcmQ=         # "password" base64 encoded (echo -n password | base64))
 
